# WordWar

./: .gitignore  Dockerfile  README.md
client/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
client/src/: index.css  main.jsx
client/src/components/: AlphabetParticles.jsx  AnswerForm.jsx  ChallengePanel.jsx  ParticleCanvas.jsx  ScoreBoard.jsx  (+2 more)
data/: dictionary.json
server/: CMakeLists.txt
server/build_win/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  ThinkAndTypeServer.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  think-and-type-server.vcxproj  think-and-type-server.vcxproj.filters
server/build_win/think-and-type-server.dir/Release/: think-and-type-server.exe.recipe
server/build_win/think-and-type-server.dir/Release/think-an.CD24B21B.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
server/build_win/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
server/build_win/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog
server/build_win/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
server/build_win/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
server/data/: add_indian_names.py  add_names.js  manage_words.py  remove_word.js  setup_sqlite.py
server/src/: build_dictionary.py  dictionary.h  excelStore.h  gameManager.cpp  gameManager.h  geminiValidator.h  letterPool.h  main.cpp  scoringEngine.h
(+8 files in other folders)
